add graphql server and client

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-POSTGRES_USER=lizaalert
+POSTGRES_USER=liza
 POSTGRES_PASSWORD=topsecret
-POSTGRES_DB=lizaalert
+POSTGRES_DB=public
+DATABASE_URL=postgresql://liza:topsecret@pg-liza-alert:5432/mydb?schema=lizaalert
