--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,12 @@
     "build:dev": "webpack --mode development",
     "build:start": "cd dist && PORT=8080 npx serve",
     "start": "webpack serve --open --mode development",
-    "start:live": "webpack serve --open --mode development --live-reload --hot"
+    "start:live": "webpack serve --open --mode development --live-reload --hot",
+    "watch-codegen": "graphql-codegen --watch",
+    "✨ Utilities": "",
+    "lint": "eslint 'src/**/*.{js,ts,tsx,graphql}'",
+    "update-schema": "graphql-codegen -c ./codegen.download.yml",
+    "clear": "find ./src -name \"__generated__\" -exec rm -rf '{}' +"
   },
   "license": "MIT",
   "author": {
@@ -19,6 +24,13 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.10.4",
+    "@graphql-codegen/add": "^3.1.1",
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/introspection": "2.1.1",
+    "@graphql-codegen/near-operation-file-preset": "^2.2.14",
+    "@graphql-codegen/typescript": "2.5.1",
+    "@graphql-codegen/typescript-operations": "2.4.2",
+    "@graphql-codegen/typescript-react-apollo": "3.2.16",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
     "autoprefixer": "^10.1.0",
@@ -34,6 +46,11 @@
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@apollo/client": "^3.6.8",
+    "@graphql-codegen/cli": "^2.6.2",
+    "antd": "^4.21.3",
+    "graphql": "^16.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
