--- a/client/package.json
+++ b/client/package.json
@@ -2,11 +2,14 @@
   "name": "client",
   "version": "1.0.0",
   "scripts": {
-    "build": "webpack --mode production",
-    "build:dev": "webpack --mode development",
+    "build": "npm run build-codegen && npm run build-webpack",
+    "build-webpack" : "webpack --mode production",
+    "build-codegen": "graphql-codegen",
     "build:start": "cd dist && PORT=8080 npx serve",
+
     "start": "webpack serve --open --mode development",
     "start:live": "webpack serve --open --mode development --live-reload --hot",
+
     "watch-codegen": "graphql-codegen --watch",
     "✨ Utilities": "",
     "lint": "eslint 'src/**/*.{js,ts,tsx,graphql}'",
