--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,8 @@ services:
     build:
       context: ./server
       dockerfile: Dockerfile
-    # ports:
-    #   - 3000:3000
+    ports:
+      - 3333:3333
     depends_on:
       - pg-liza-alert
     env_file:
