--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,11 @@
   "version": "1.0.0",
   "scripts": {
     "build": "npm run build-codegen && npm run build-webpack",
-    "build-webpack" : "webpack --mode production",
+    "build-webpack": "webpack --env mode=prod --mode production",
     "build-codegen": "graphql-codegen",
     "build:start": "cd dist && npx serve -l 8080",
-
-    "start": "webpack serve --open --mode development",
+    "start": "webpack serve --env mode=dev --open --mode development",
     "start:live": "webpack serve --open --mode development --live-reload --hot",
-
     "watch-codegen": "graphql-codegen --watch",
     "✨ Utilities": "",
     "lint": "eslint 'src/**/*.{js,ts,tsx,graphql}'",
@@ -39,6 +37,7 @@
     "autoprefixer": "^10.1.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
+    "dotenv-webpack": "^7.1.0",
     "html-webpack-plugin": "^5.3.2",
     "postcss": "^8.2.1",
     "postcss-loader": "^4.1.0",
