fix server env issue

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -19,6 +19,6 @@ FROM node:16
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package*.json ./
 COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/prod.env ./dist
+COPY --from=builder /app/prod.env .
 
 CMD [ "npm", "run", "start:prod" ]
