--- a/server/prod.env
+++ b/server/prod.env
@@ -1,2 +1,2 @@
 SERVER_PORT=3333
-DATABASE_URL=postgresql://liza:topsecret@$allin-srv:5434/mydb?schema=lizaalert
+DATABASE_URL=postgresql://liza:topsecret@allin-srv:5434/mydb?schema=lizaalert
