--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 POSTGRES_USER=liza
 POSTGRES_PASSWORD=topsecret
 POSTGRES_DB=public
+CLIENT_PORT=8080
+HOST_CLIENT_PORT=8081
+GRAPHQL_SERVER=http://allin-srv:3333/graphql
+SERVER_PORT=3333
+HOST_SERVER_PORT=3333
+DATABASE_URL=postgresql://liza:topsecret@allin-srv:5434/mydb?schema=lizaalert
