--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "scripts": {
     "build": "npm run build-codegen && npm run build-webpack",
-    "build-webpack": "webpack --env mode=prod --mode production",
+    "build-webpack": "webpack --mode production",
     "build-codegen": "graphql-codegen",
     "build:start": "cd dist && npx serve -l 8080",
-    "start": "webpack serve --env mode=dev --open --mode development",
+    "start": "webpack serve --open --mode development",
     "start:live": "webpack serve --open --mode development --live-reload --hot",
     "watch-codegen": "graphql-codegen --watch",
     "✨ Utilities": "",
