--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,21 +2,26 @@ version: '3.8'
 services:
   client-liza-alert:
     container_name: client-liza-alert
+    environment:
+      - GRAPHQL_SERVER=${GRAPHQL_SERVER}
     build:
       context: ./client
       dockerfile: Dockerfile
     ports:
-      - 8081:8080
+      - ${HOST_CLIENT_PORT}:${CLIENT_PORT}
     depends_on:
       - server-liza-alert
       - pg-liza-alert
   server-liza-alert:
     container_name: server-liza-alert
+    environment:
+      - SERVER_PORT=${SERVER_PORT}
+      - DATABASE_URL=${DATABASE_URL}
     build:
       context: ./server
       dockerfile: Dockerfile
     ports:
-      - 3333:3333
+      - ${HOST_SERVER_PORT}:${SERVER_PORT}
     depends_on:
       - pg-liza-alert
   wsgi-liza-alert:
@@ -32,7 +37,9 @@ services:
     restart: always
     ports:
       - 5434:5432
-    env_file:
-      - .env
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - ./posgtes/data:/var/lib/postgresql/data
