--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ HOST_CLIENT_PORT=8081
 GRAPHQL_SERVER=http://allin-srv:3333/graphql
 SERVER_PORT=3333
 HOST_SERVER_PORT=3333
-DATABASE_URL=postgresql://liza:topsecret@allin-srv:5434/mydb?schema=lizaalert
+DATABASE_URL=postgresql://liza:topsecret@allin-srv:5434/public?schema=lizaalert
