--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "scripts": {
     "build": "npm run build-codegen && npm run build-webpack",
-    "build-webpack": "webpack --mode production",
+    "build-webpack": "webpack --mode production --config webpack.dev.js",
     "build-codegen": "graphql-codegen",
     "build:start": "cd dist && npx serve -l 8080",
-    "start": "webpack serve --open --mode development",
-    "start:live": "webpack serve --open --mode development --live-reload --hot",
+    "start": "webpack serve --open --mode development --config webpack.dev.js",
+    "start:live": "webpack serve --open --mode development --live-reload --hot --config webpack.dev.js",
     "watch-codegen": "graphql-codegen --watch",
     "✨ Utilities": "",
     "lint": "eslint 'src/**/*.{js,ts,tsx,graphql}'",
@@ -45,7 +45,8 @@
     "typescript": "^4.5.2",
     "webpack": "^5.57.1",
     "webpack-cli": "^4.9.0",
-    "webpack-dev-server": "^4.3.1"
+    "webpack-dev-server": "^4.3.1",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
