--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ POSTGRES_USER=liza
 POSTGRES_PASSWORD=topsecret
 POSTGRES_DB=public
 CLIENT_PORT=8080
-HOST_CLIENT_PORT=8081
-GRAPHQL_SERVER=http://allin-srv:3333/graphql
+HOST_CLIENT_PORT=8080
+GRAPHQL_SERVER=http://novateam.ddns.net:3333/graphql
 SERVER_PORT=3333
 HOST_SERVER_PORT=3333
-DATABASE_URL=postgresql://liza:topsecret@allin-srv:5434/public?schema=lizaalert
+DATABASE_URL=postgresql://liza:topsecret@novateam.ddns.net:5434/public?schema=lizaalert
