--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,3 +43,14 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - ./posgtes/data:/var/lib/postgresql/data
+  solr-liza-alert:
+    container_name: solr-liza-alert
+    image: solr:8.11.1
+    user: "1000:1000"
+    ports:
+      - "8983:8983"
+    volumes:
+      - ./solr:/var/solr/
+    command:
+      - solr-precreate
+      - gettingstarted
