--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "react-wordcloud": "1.2.7",
     "@apollo/client": "^3.6.8",
     "@graphql-codegen/cli": "^2.6.2",
     "antd": "^4.21.3",
