--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
     "@ant-design/icons": "^4.7.0",
     "react-wordcloud": "1.2.7",
     "recharts": "2.1.10",
+    "rc-tween-one": "3.0.6",
     "@apollo/client": "^3.6.8",
     "@graphql-codegen/cli": "^2.6.2",
     "antd": "^4.21.3",
