--- a/server/.gitignore
+++ b/server/.gitignore
@@ -2,6 +2,7 @@
 /dist
 /node_modules
 
+
 # Logs
 logs
 *.log
@@ -27,6 +28,8 @@ lerna-debug.log*
 *.launch
 .settings/
 *.sublime-workspace
+
+@generated
 
 # IDE - VSCode
 .vscode/*
