--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,8 @@
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.15.2",
     "apollo-server-express": "^3.9.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "graphql": "^16.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -52,6 +54,7 @@
     "jest": "28.0.3",
     "prettier": "^2.3.2",
     "prisma": "^3.15.2",
+    "prisma-nestjs-graphql": "^16.0.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.1",
