--- a/.env
+++ b/.env
@@ -2,10 +2,11 @@ POSTGRES_USER=liza
 POSTGRES_PASSWORD=topsecret
 POSTGRES_DB=public
 CLIENT_PORT=8080
-HOST_CLIENT_PORT=8080
+HOST_CLIENT_PORT=80
 GRAPHQL_SERVER=http://novateam.ddns.net:3333/graphql
 SERVER_PORT=3333
 HOST_SERVER_PORT=3333
 DATABASE_URL=postgresql://liza:topsecret@novateam.ddns.net:5434/public
 SOLR_CORE=lizaalert
 SOLR_URL=http://novateam.ddns.net:8983/solr/
+CVAT_HOST=45.9.25.104
