--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "@nestjs/graphql": "^10.0.16",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/serve-static": "^2.2.2",
     "@prisma/client": "^3.15.2",
     "apollo-server-express": "^3.9.0",
     "class-transformer": "^0.5.1",
